planner 조회 시 장소 목록 포함하여 응답